# service-erg-ml

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.sh
ops/: update_nomad_configs.py
ops/nomad/: advanced_power_forecast-predict.hcl  advanced_power_forecast-train.hcl  service-erg-ml.hcl
