[tool.poetry]
name = "service-erg-ml"
version = "0.1.0"
description = "ERG client configuration for Core ML Platform"
authors = ["Enlitia"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
core-ml-platform = {path = "core-ml-platform", develop = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
ruff = "^0.12.0"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
